fixed font issue and improved alignment of lyrics to extra breves

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,26 +1,26 @@
 @font-face {
-    font-family: 'TeXGyreSchola';
+    font-family: 'TeX Gyre Schola';
     src: url('TeXGyreSchola-Bold.woff2') format('woff2');
     font-weight: bold;
     font-style: normal;
     font-display: block;
 }
 @font-face {
-    font-family: 'TeXGyreSchola';
+    font-family: 'TeX Gyre Schola';
     src: url('TeXGyreSchola-BoldItalic.woff2') format('woff2');
     font-weight: bold;
     font-style: italic;
     font-display: block;
 }
 @font-face {
-    font-family: 'TeXGyreSchola';
+    font-family: 'TeX Gyre Schola';
     src: url('TeXGyreSchola-Italic.woff2') format('woff2');
     font-weight: normal;
     font-style: italic;
     font-display: block;
 }
 @font-face {
-    font-family: 'TeXGyreSchola';
+    font-family: 'TeX Gyre Schola';
     src: url('TeXGyreSchola-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
@@ -36,7 +36,7 @@ html {
 .main {
     max-width: 700px;
     margin: 0 auto;
-    font-family: 'TeXGyreSchola';
+    font-family: 'TeX Gyre Schola';
     position: relative;
     padding: 0 15px;
 }
@@ -46,9 +46,6 @@ html {
 .score svg {
     width: 100%;
     height: auto;
-}
-.score svg text {
-    font-family: "TeXGyreSchola";
 }
 body {
     font-size: 1em;
